--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "https://example.com/api",
-    "STRIPE_SECRET_KEY": "@stripe-secret-key",
-    "NEXTAUTH_URL": "https://your-vercel-domain.vercel.app"
+    "NEXT_PUBLIC_API_URL": "https://amazon-clone-sneha-ghosh-techisopod.vercel.app/api",
+  "STRIPE_SECRET_KEY": "sk_test_placeholder",
+  "NEXTAUTH_URL": "https://amazon-clone-sneha-ghosh-techisopod.vercel.app/"
   }
 }
